[gd_scene load_steps=5 format=2]

[ext_resource path="res://orange kid.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://DialogBox.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.992157, 0.992157, 0.992157, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[node name="DialogBox" type="HBoxContainer"]
margin_left = 709.0
margin_top = 104.0
margin_right = 1535.0
margin_bottom = 321.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
left_justified = false

[node name="Spacer" type="Control" parent="."]
margin_right = 74.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 78.0
margin_right = 826.0
margin_bottom = 217.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 738.0
margin_bottom = 207.0
custom_constants/margin_right = 30
custom_constants/margin_top = 0
custom_constants/margin_left = 30
custom_constants/margin_bottom = 20

[node name="DialogLabel" type="Label" parent="PanelContainer/MarginContainer"]
margin_left = 30.0
margin_right = 698.0
margin_bottom = 177.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hello! My name is sandra. I'd like to check in for security"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.02
[connection signal="timeout" from="TypeTimer" to="." method="_on_TypeTimer_timeout"]
